// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots pdb/PDBDetailsView Default 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h1
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
                >
                  PodDisruptionBudget
                </h1>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="false"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <dl
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Name
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    coredns-pdb
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Namespace
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    kube-system
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Creation
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    2022-10-06T05:17:14.000Z
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Labels
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
                      style="max-width: 80%;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth"
                      >
                        <p
                          class="MuiTypography-root makeStyles-metadataValueLabel MuiTypography-body1"
                        >
                          addonmanager.kubernetes.io/mode: Reconcile
                        </p>
                      </div>
                    </div>
                  </div>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Annotations
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
                      style="max-width: 80%;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth"
                      >
                        <p
                          class="MuiTypography-root makeStyles-metadataValueLabel MuiTypography-body1"
                          title="kubectl.kubernetes.io/last-applied-configuration: {\\"apiVersion\\":\\"policy/v1beta1\\",\\"kind\\":\\"PodDisruptionBudget\\",\\"metadata\\":{\\"annotations\\":{},\\"labels\\":{\\"addonmanager.kubernetes.io/mode\\":\\"Reconcile\\"},\\"name\\":\\"coredns-pdb\\",\\"namespace\\":\\"kube-system\\"},\\"spec\\":{\\"minAvailable\\":1,\\"selector\\":{\\"matchLabels\\":{\\"k8s-app\\":\\"kube-dns\\"}}}}
"
                        >
                          kubectl.kubernetes.io/last-applied-configuration: …
                        </p>
                      </div>
                    </div>
                  </div>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Max Unavailable
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                />
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Min Available
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  1
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Selector
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-statusLabel  MuiTypography-body1"
                    style="background-color: rgb(240, 240, 240); color: rgba(0, 0, 0, 0.87);"
                  >
                    k8s-app: kube-dns
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Status
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-statusLabel  MuiTypography-body1"
                    style="background-color: rgb(240, 240, 240); color: rgba(0, 0, 0, 0.87);"
                  >
                    Allowed disruptions
                    :
                    1
                  </span>
                  <br />
                  <span
                    class="MuiTypography-root makeStyles-statusLabel  MuiTypography-body1"
                    style="background-color: rgb(240, 240, 240); color: rgba(0, 0, 0, 0.87);"
                  >
                    Current
                    :
                    2
                  </span>
                  <br />
                  <span
                    class="MuiTypography-root makeStyles-statusLabel  MuiTypography-body1"
                    style="background-color: rgb(240, 240, 240); color: rgba(0, 0, 0, 0.87);"
                  >
                    Desired
                    :
                    1
                  </span>
                  <br />
                  <span
                    class="MuiTypography-root makeStyles-statusLabel  MuiTypography-body1"
                    style="background-color: rgb(240, 240, 240); color: rgba(0, 0, 0, 0.87);"
                  >
                    Total
                    :
                    2
                  </span>
                  <br />
                </dd>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Events
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                >
                  No data to be shown.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots pdb/PDBDetailsView Error 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
                >
                  Phony error is phony!
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots pdb/PDBDetailsView No Item Yet 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
              >
                <div
                  class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                  role="progressbar"
                  style="width: 40px; height: 40px;"
                  title="Loading resource data"
                >
                  <svg
                    class="MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="20.2"
                      stroke-width="3.6"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;
